Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16000

llog_reader: "Segmentation fault" while reading updatelog llog record

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0, Lustre 2.15.2
    • None
    • VMs + lustre 2.15 (ldiskfs)
    • 3
    • 9223372036854775807

      [root@mds1 update_log_dir]# llog_reader /tmp/\[0x200000401\:0x3\:0x0\]
      rec #28073 type=106a0000 len=1024 offset 28452864
      rec #28074 type=106a0000 len=1024 offset 28453888
      rec #28075 type=106a0000 len=1024 offset 28454912
      rec #28076 type=106a0000 len=1024 offset 28455936
      Header size : 32768      llh_size : 424
      Time : Wed Jul  6 11:18:39 2022
      Number of records: 4    cat_idx: 1      last_idx: 28076
      Target uuid : 
      -----------------------
      #28073 (1024)updatelog record master_transno:4301469635 batchid:27247 
              [0x200000401:0x2:0x0] type:delete/11 params:1 p_0:0 
              [0x200000401:0x2:0x0] type:ref_del/4 params:0 
              [0x24000040e:0x5f03:0x0] type:ref_del/4 params:0 
              [0x24000040e:0x5f03:0x0] type:ref_del/4 params:0 
              [0x200000401:0x2:0x0] type:attr_set/5 params:1 p_0:1 
              [0x24000040e:0x5f03:0x0] type:attr_set/5 params:1 p_0:2 
              [0x240000400:0x18bc:0x0] type:attr_set/5 params:1 p_0:2 
              [0x200000401:0x18bc:0x0] type:attr_set/5 params:1 p_0:2 
              [0x24000040e:0x5f03:0x0] type:ref_del/4 params:0 
              [0x24000040e:0x5f03:0x0] type:delete/11 params:1 p_0:3 
              [0x24000040e:0x5f03:0x0] type:ref_del/4 params:0 
              [0x24000040e:0x5f03:0x0] type:delete/11 params:1 p_0:4 
              [0x24000040e:0x5f03:0x0] type:destroy/2 params:0 
              [0x240000400:0x18bc:0x0] type:ref_del/4 params:0 
              [0x240000400:0x18bc:0x0] type:destroy/2 params:0 
              [0x200000401:0x18bc:0x0] type:ref_del/4 params:0 
              [0x200000401:0x18bc:0x0] type:destroy/2 params:0 
              [0x200000001:0x15:0x0] type:write/12 params:2 p_0:5 p_1:6 
              p_0 - 7/toto48
      Segmentation fault (core dumped)
      
      

            eaujames Etienne Aujames
            eaujames Etienne Aujames
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: